--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -1,22 +1,355 @@
-html {
-  font-size: 14px;
+:root {
+    --main-color: rgb(84, 32, 1, 1);
+    --secondary-color: rgb(255, 53, 97);
+    --secondary-color-darker: rgb(209, 8, 52);
+    --background-color: rgb(255, 255, 255);
 }
 
-@media (min-width: 768px) {
-  html {
-    font-size: 16px;
-  }
-}
-
-.btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
-  box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
-}
-
-html {
-  position: relative;
-  min-height: 100%;
+* {
+    font-size: 24px;
+    font-family: 'Inter', sans-serif;
 }
 
 body {
-  margin-bottom: 60px;
+    margin: 0;
+}
+
+h1 {
+    font-size: 2rem;
+    color: var(--main-color);
+}
+
+h2 {
+    font-size: 1.2rem;
+}
+
+h1,
+h2,
+p,
+footer,
+ol,
+ul {
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+}
+
+.cursive {
+    font-style: italic;
+}
+
+.bold {
+    font-weight: 700;
+}
+
+.main-heading {
+    font-family: "Josefin Sans", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 300;
+    font-style: normal;
+}
+
+/*Container for all content on page*/
+.container {
+    height: 100vh;
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    grid-template-rows: 3em 1fr 2em;
+}
+
+/*Grid for placement of navigation*/
+.container header.grid-header {
+    grid-column-start: 1;
+    grid-column-end: 2;
+    height: min-content;
+    background-color: var(--background-color);
+}
+
+/*Grid for main content area*/
+.container main.grid-main {
+    grid-row-start: 2;
+    grid-column-start: 1;
+    grid-column-end: 2;
+    background-color: var(--background-color);
+}
+
+/*Grid for footer*/
+.container footer.grid-footer {
+    grid-column-start: 1;
+    grid-column-end: 3;
+    grid-row-start: 3;
+    height: 2rem;
+}
+
+/*To change grid look for smaller screen*/
+@media screen and (max-width: 600px) {
+    .container {
+        height: 100vh;
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: 5rem max-content 2rem;
+    }
+
+        .container header.grid-header {
+            grid-column-start: 1;
+            grid-row-start: 1;
+            height: 3em;
+            background-color: rgb(255, 255, 255);
+        }
+
+        .container main.grid-main {
+            grid-row-start: 2;
+            grid-column-start: 1;
+            grid-column-end: 1;
+            min-height: calc(100vh - 3em - 2em);
+            background-color: var(--background-color);
+        }
+
+        .container footer.grid-footer {
+            grid-row-start: 4;
+            grid-row-end: 4;
+            grid-column-start: 1;
+            grid-column-end: 3;
+            height: 2rem;
+        }
+}
+
+/*Id for structure of the navivation menu*/
+#navigation {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    padding-left: 0;
+    list-style-type: none;
+    border-radius: 0 0 0 0;
+}
+
+/*Id for checkbox main navigation menu*/
+#nav-toggle {
+    display: none;
+}
+
+/*Id for hamburger navigation menu*/
+#ham-menu {
+    display: none;
+}
+
+/*To show hamburger menu instead when regular menu becomes almost squished,
+and slightly alter general look of app*/
+@media screen and (max-width: 600px) {
+    body {
+        padding-top: 2rem;
+    }
+
+    .main-heading {
+        text-align: center;
+    }
+    /*Placement for hamburger menu*/
+    #ham-menu {
+        display: block;
+        position: fixed;
+        right: 1rem;
+        top: 1rem;
+        z-index: 1;
+    }
+
+    .fa-solid, fa-bars {
+        color: var(--secondary-color);
+    }
+    /*Look for drop down menu*/
+    #navigation {
+        flex-direction: column;
+        position: fixed;
+        z-index: 1;
+        left: 0;
+        right: 0;
+        top: 0;
+        bottom: 100%;
+        text-align: center;
+        background-color: var(--background-color);
+        overflow: hidden;
+        margin-top: 0;
+        transition: all 0.5s;
+    }
+    /*Look for drop down menu when hamburger menu is checked*/
+    #nav-toggle:checked ~ #navigation {
+        background-color: var(--background-color);
+        bottom: 50%;
+        padding-top: 0.5rem;
+        padding: 0.5rem;
+    }
+}
+
+/*Look for a normal, unvisited link*/
+a:link {
+    color: var(--main-color);
+    text-decoration: none;
+    font-size: 1rem;
+}
+
+/*Look for a link the user has visited*/
+a:visited {
+    color: var(--main-color);
+}
+
+/*Look for a link when the user mouses over it*/
+a:hover {
+    text-underline-offset: 0.2rem;
+    text-decoration: underline var(--main-color);
+}
+
+/* Look for a link the moment it is clicked */
+a:active {
+    color: var(--secondary-color-darker);
+    text-underline-offset: 0.2rem;
+    text-decoration: underline var(--secondary-color-darker);
+}
+
+/*Look for a link in menu when you are on that page*/
+#current-page {
+    color: var(--secondary-color);
+}
+
+/*Main content area for start page to center the image*/
+#main-flex {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    width: 100%;
+}
+
+/*Styling for the image on the home page*/
+#main-flex-img {
+    margin-top: 1rem;
+    height: 20rem;
+    background: rgb(255, 255, 255);
+/*    background: linear-gradient( 56deg, rgba(255, 255, 255, 0) 0%, rgba(255, 0, 55, 1) 100% );
+    border-radius: 999999rem;*/
+}
+
+/*Make image on home page smaller with smaller screen*/
+@media screen and (max-width: 900px) {
+    #main-flex-img {
+        height: 10rem;
+    }
+}
+
+/*Class for the general look when displaying a page and it's content*/
+.page-content {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    justify-content: center;
+}
+
+/*Class for the secret easter egg button*/
+.header-button {
+    color: var(--secondary-color);
+    background-color: var(--secondary-color);
+    border: none;
+}
+
+/*For lists on different pages*/
+.ol-resume,
+.ul-main-page {
+    list-style-type: none;
+}
+
+.li-resume {
+    margin-bottom: 1.1rem;
+}
+
+/*To change display of resume depending on screen width,
+if screen is larger than 900px, info is presented in two columns*/
+@media screen and (min-width: 900px) {
+    .resume-card {
+        display: flex;
+        flex-direction: column;
+        width: 50%;
+    }
+
+    .div-resume {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+    }
+}
+
+/*Classes to make the "cards" in the portfolio present next to each other nicely*/
+.ul-portfolio {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.img-portfolio {
+    max-width: 90%;
+}
+
+.main-page-card {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 2rem;
+    width: 48%;
+    border-radius: 15px;
+    align-items: center;
+    box-shadow: 5px 5px 8px 8px lightgray;
+}
+
+/*Placement for loading icon*/
+.loading-icon {
+    margin-top: 50vh;
+    margin-left: 48vw;
+}
+
+/*When screen becomes smaller display cards in a column instead*/
+@media screen and (max-width: 550px) {
+    .ul-portfolio {
+        flex-direction: column;
+    }
+
+    .project-card {
+        width: 100%;
+    }
+}
+
+/*For larger screens three cards are displayed in a row*/
+@media screen and (min-width: 900px) {
+    .project-card {
+        width: 30%;
+    }
+}
+
+/*Class to get space around the button in the card*/
+.div-show-more {
+    margin-top: 1.5rem;
+    margin-bottom: 2rem;
+}
+
+/*Class for the look of the modal popup*/
+.more-info-modal {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translateX(-50%) translateY(-50%);
+    text-align: center;
+    background-color: var(--background-color);
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+    padding-bottom: 1.5rem;
+    border-radius: 15px;
+    border: 1px solid lightgray;
+}
+
+/*Class for the look of the actual show more button*/
+.show-more-button {
+    background-color: var(--secondary-color);
+    color: white;
+    border-radius: 40px;
+    padding-top: 0.6rem;
+    padding-bottom: 0.6rem;
+    padding-left: 1.1rem;
+    padding-right: 1.1rem;
+    border: 1px solid var(--secondary-color);
 }
