--- a/Views/Home/Menu.cshtml
+++ b/Views/Home/Menu.cshtml
@@ -1,5 +1,17 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
+﻿@model List<MenuItem>
+
+<h1>@ViewData["Menu"]</h1>
+
+<ul class="list-group">
+    @foreach (var menuItem in Model)
+    {
+        @if(menuItem.IsAvailable)
+        {
+            <li class="list-group-item">@menuItem.Name Price: $ @menuItem.Price</li>
+        }
+@*         else
+        {
+            <li class="list-group-item disabled" @menuItem.Name Price: $ @menuItem.Price</li>
+        } *@
+    }
+</ul>
