--- a/Views/Menu/Create.cshtml
+++ b/Views/Menu/Create.cshtml
@@ -2,7 +2,7 @@
 
 <h1>Add new dish to menu</h1>
 
-<form asp-action="Create" method="post">
+<form method="post" asp-controller="Menu" asp-action="Create">
     <div class="form-group">
         <label asp-for=Name>Name</label>
         <input asp-for=Name class="form-control" />
@@ -14,16 +14,12 @@
         <span asp-validation-for="Price" class="text-danger"></span>
     </div>
     <div class="form-check">
-        <input asp-for=IsAvailable class="form-check-input" type="hidden" name="availableBool" value="false">
-        <input asp-for=IsAvailable class="form-check-input" type="checkbox" name="availableBool" value="true" id="flexCheckDefault">
+        <input asp-for=IsAvailable class="form-check-input" type="checkbox" value="true" id="flexCheckDefault">
         <label asp-for=IsAvailable class="form-check-label" for="flexCheckDefault">Available</label>
-        <span asp-validation-for="IsAvailable" class="text-danger"></span>
     </div>
     <div class="form-check">
-        <input asp-for=IsPopular class="form-check-input" type="hidden" name="popularBool" value="false">
-        <input asp-for=IsPopular class="form-check-input" type="checkbox" name="popularBool" value="true" id="flexCheckDefault">
+        <input asp-for=IsPopular class="form-check-input" type="checkbox" value="true" id="flexCheckDefault">
         <label asp-for=IsPopular class="form-check-label" for="flexCheckDefault">Popular</label>
-        <span asp-validation-for="IsPopular" class="text-danger"></span>
     </div>
 
     <button type="submit" class="btn btn-primary">Save</button>
