--- a/Views/Menu/Edit.cshtml
+++ b/Views/Menu/Edit.cshtml
@@ -1,35 +1,30 @@
 ﻿@model MenuItem
 
-@ViewData["Title"] = "Edit menu";
+<h1>Edit menu dish</h1>
 
-
-<h1>@ViewData["Title"]</h1>
-
-<form method="post" asp-action="Edit">
+<form method="post" asp-controller="Menu" asp-action="Edit">
     <div class="form-group">
         <label asp-for=Name>Name</label>
-        <input asp-for=Name class="form-control" />
+        <input asp-for=Name class="form-control" value="@Model.Name" />
         <span asp-validation-for="Name" class="text-danger"></span>
     </div>
     <div class="form-group">
         <label asp-for=Price>Price</label>
-        <input asp-for=Price class="form-control" />
+        <input asp-for=Price class="form-control" value="@Model.Price"/>
         <span asp-validation-for="Price" class="text-danger"></span>
     </div>
     <div class="form-check">
-        <input asp-for=IsAvailable class="form-check-input" type="hidden" name="availableBool" value="false">
-        <input asp-for=IsAvailable class="form-check-input" type="checkbox" name="availableBool" value="true" id="flexCheckDefault">
+        <input asp-for=IsAvailable class="form-check-input" type="checkbox" value="true" id="flexCheckDefault" />
         <label asp-for=IsAvailable class="form-check-label" for="flexCheckDefault">Available</label>
         <span asp-validation-for="IsAvailable" class="text-danger"></span>
     </div>
     <div class="form-check">
-        <input asp-for=IsPopular class="form-check-input" type="hidden" name="popularBool" value="false">
-        <input asp-for=IsPopular class="form-check-input" type="checkbox" name="popularBool" value="true" id="flexCheckDefault">
+        <input asp-for=IsPopular class="form-check-input" type="checkbox" value="true" id="flexCheckDefault" />
         <label asp-for=IsPopular class="form-check-label" for="flexCheckDefault">Popular</label>
         <span asp-validation-for="IsPopular" class="text-danger"></span>
     </div>
 
-    <input type="hidden" asp-for="Id" />
+    <input type="hidden" asp-for="MenuItemId" />
 
     <button type="submit" class="btn btn-primary">Save</button>
 </form>
