--- a/Views/Menu/Index.cshtml
+++ b/Views/Menu/Index.cshtml
@@ -1,19 +1,46 @@
 ﻿@model List<MenuItem>
 
-@foreach (var menuItem in Model)
-{
-    <div class="card" style="width:18rem">
-        <div class="card-body">
-            <h5 class="card-title">@menuItem.Name</h5>
-            <p class="card-text">Price: @menuItem.Price</p>
-            <a asp-controller="Menu" asp-action="Edit" asp-route-id=@menuItem.Id class="btn btn-warning">Edit</a>
-
-            <form method="post" asp-action="Delete" style="display:inline;">
-                <input type="hidden" name="id" value="@menuItem.Id" />
-                <button type="submit" class="btn btn-danger">Delete</button>
-            </form>
-        </div>
-    </div>
+@{
+    string isAvailable = "No";
+    string isPopular = "No";
 }
 
-<a asp-action="Create" asp-controller="Menu" class="btn btn-primary">Add new menu item</a>
+<h1>@ViewData["Menu"]</h1>
+
+
+
+@if(Model != null)
+{
+    <ul>
+    @foreach (var menuItem in Model)
+    {
+        @if (menuItem.IsAvailable) { isAvailable = "Yes"; }
+        @if (menuItem.IsPopular) { isPopular = "Yes"; }
+        <li>
+            <div class="card" style="width:18rem">
+                <div class="card-body">
+                    <h5 class="card-title">@menuItem.Name</h5>
+                    <p class="card-text">Price: @menuItem.Price</p>
+                    <p class ="card-text">Is available: @isAvailable</p>
+                    <p class="card-text">Is popular: @isPopular</p>
+@*                     <a asp-controller="Menu" asp-action="Edit" asp-route-id=@menuItem.MenuItemId class="btn btn-warning">Edit</a> *@
+                        <form method="get" asp-controller="Menu" asp-action="Edit" style="display:inline;">
+                            <input type="hidden" name="menuItemId" value="@menuItem.MenuItemId" />
+                            <button type="submit" class="btn btn-warning">Edit</button>
+                        </form>
+                    <form method="post" asp-controller="Menu" asp-action="Delete" style="display:inline;">
+                        <input type="hidden" name="menuItemId" value="@menuItem.MenuItemId" />
+                        <button type="submit" class="btn btn-danger">Delete</button>
+                    </form>
+                </div>
+            </div>
+        </li>
+    }
+    </ul>
+}
+else
+{
+    <p>There are no dishes on the menu.</p>
+}
+
+<a asp-controller="Menu" asp-action="Create" class="btn btn-primary">Add new menu item</a>
