Fixed styling on views and added info and functionality.

--- a/Views/Home/About.cshtml
+++ b/Views/Home/About.cshtml
@@ -1,15 +1,26 @@
 ﻿@{
     ViewData["Title"] = "About us";
 }
-<h1>@ViewData["Title"]</h1>
 
 <img id="main-flex-img"
      src="~/img/about-page-img.jpg"
      alt="Korean main and side dishes on a table." />
 
+<h1 class="main-font">@ViewData["Title"]</h1>
+
 <p>
-    Korean food resembles the nature of the Korean people, boasting powerful, diverse, and harmonious charms. Thanks to the geographical advantage of being surrounded by the sea on three sides and featuring many granaries and mountainous regions, the country has access to a wide range of materials and ingredients to utilize. Korea’s food culture has come a long way and demonstrates creative convergence that gives birth to new, fresh dishes even at this very moment in time. The changing seasons in Korea offer different seasonal ingredients and every region and every home has its own unique touch to their cooking while different specialties and delicacies fill up meal tables from one season to the next. Enjoy a gourmet experience in this dynamic Korean BBQ!
+    Korean food resembles the nature of the Korean people, boasting powerful, diverse, and harmonious charms. 
+    Thanks to the geographical advantage of being surrounded by the sea on three sides and featuring many granaries 
+    and mountainous regions, the country has access to a wide range of materials and ingredients to utilize. 
+    Korea’s food culture has come a long way and demonstrates creative convergence that gives birth to new, 
+    fresh dishes even at this very moment in time. The changing seasons in Korea offer different seasonal 
+    ingredients and every region and every home has its own unique touch to their cooking while different 
+    specialties and delicacies fill up meal tables from one season to the next. Enjoy a gourmet experience in this dynamic Korean restaurant!
 </p>
 <p>
-    A typical Korean meal is a full table setting featuring rice, soup, side dishes, meat and stew. At our Korean BBQ, don’t be surprised at all the variety of small side dishes that accompany the main dish. Kimchi, the epitome of fermented food, is also a side dish that cannot be left out as it goes well with any kind of food. Regarding the main dish, you will grill the meat at the table in the authentic Korean way. Hope you enjoy!
+    A typical Korean meal is a full table setting featuring rice, soup, side dishes, meat and stew. 
+    Here at Ommo, don’t be surprised at all the variety of small side dishes that accompany the main dish. 
+    Kimchi, the epitome of fermented food, is also a side dish that cannot be left out as it goes well 
+    with any kind of food. Regarding the main dish, you will grill the meat at the table in the authentic Korean way. 
+    Hope you enjoy!
 </p>
