--- a/Views/Booking/CreateBooking.cshtml
+++ b/Views/Booking/CreateBooking.cshtml
@@ -2,11 +2,13 @@
 
 @{
     DateTime earliestTimeToBook = DateTime.Now.AddHours(1);
+
+    ViewData["Title"] = "Add new reservation";
 }
 
-<h1>Add new reservation</h1>
+<h1 class="main-font">@ViewData["Title"]</h1>
 
-<form method="post" asp-controller="Booking" asp-action="Create">
+<form method="post" asp-controller="Booking" asp-action="CreateBooking">
     <div class="form-group">
         <label asp-for=NoOfCustomers>Number of customers</label>
         <input asp-for=NoOfCustomers class="form-control" />
@@ -16,16 +18,11 @@
         <label asp-for=BookedDateTime>Select date and time for reservation</label>
             <input asp-for=BookedDateTime type="datetime-local" asp-format="{0:yyyy-MM-ddTHH:mm}" 
                class="form-control"
-               value="@earliestTimeToBook" 
-               step="60"
+               value="@earliestTimeToBook"
                min="@earliestTimeToBook"
-               max="@DateTime.Now.AddYears(1)"/>
+               max="@DateTime.Now.AddYears(1)"
+               />
         <span asp-validation-for="BookedDateTime" class="text-danger"></span>
-    </div>
-    <div class="form-group">
-        <label asp-for=PhoneNo>Phone number</label>
-        <input asp-for=PhoneNo class="form-control" />
-        <span asp-validation-for=PhoneNo class="text-danger"></span>
     </div>
     <div class="form-group">
         <label asp-for=Name>Full name</label>
@@ -33,9 +30,17 @@
         <span asp-validation-for=Name class="text-danger"></span>
     </div>
     <div class="form-group">
+        <label asp-for=PhoneNo>Phone number</label>
+        <input asp-for=PhoneNo class="form-control" />
+        <span asp-validation-for=PhoneNo class="text-danger"></span>
+    </div>
+    <div class="form-group">
         <label asp-for=TableId>Table number</label>
         <input asp-for=TableId class="form-control" />
         <span asp-validation-for=TableId class="text-danger"></span>
     </div>
-    <button type="submit" class="btn btn-primary">Save</button>
+    <button type="submit" class="btn btn-primary btn-margin">Save</button>
+    <a asp-controller="Booking" asp-action="IndexBooking" class="btn btn-secondary btn-margin">Cancel</a>
 </form>
+
+
