--- a/Views/Home/Admin.cshtml
+++ b/Views/Home/Admin.cshtml
@@ -1,21 +1,30 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-    ViewData["Title"] = "Admin";
+﻿@{
+    ViewData["Title"] = "Admin portal";
 }
 
-<h1>Administrator portal</h1>
+<h1 class="main-font">@ViewData["Title"]</h1>
 
-<div class="card" style="width:18rem">
-    <div class="card-body">
-        <h2 class="card-title">Manage bookings</h2>
-        <p class="card-text">Create, edit, delete and view all bookings.</p>
-        <a asp-controller="Booking" asp-action="Index" class="btn btn-warning">View bookings</a>
+<div class="row btn-margin">
+    <div class="col-sm-6">
+        <div class="card">
+            <div class="card-body">
+                <h2 class="card-heading">Reservations</h2>
+                <p class="card-p">Create, edit, delete and view all bookings.</p>
+                <a asp-controller="Booking" asp-action="IndexBooking" class="btn btn-primary">View reservations</a>
+            </div>
+        </div>
     </div>
-    <div class="card-body">
-        <h2 class="card-title">Manage menu</h2>
-        <p class="card-text">Create, edit, delete and view dishes on the menu.</p>
-        <a asp-controller="Menu" asp-action="Index" class="btn btn-warning">View menu</a>
+    <div class="col-sm-6">
+        <div class="card">
+            <div class="card-body">
+                <h2 class="card-heading">Menu</h2>
+                <p class="card-p">Create, edit, delete and view dishes.</p>
+                <a asp-controller="Menu" asp-action="IndexMenu" class="btn btn-primary">View menu</a>
+            </div>
+        </div>
     </div>
 </div>
+
+<form asp-controller="Account" asp-action="Logout" method="post">
+    <button type="submit" class="btn btn-danger btn-margin">Logout</button>
+</form>
