--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -6,7 +6,7 @@
 
 <h1 class="main-font">@ViewData["Title"]</h1>
 
-<form asp-action="Login" method="post">
+<form asp-action="Login" method="post" class="page-content-form">
     <div class="form-group">
         <label asp-for="Email">Email</label>
         <input asp-for="Email" class="form-control" />
