--- a/Views/Booking/EditBooking.cshtml
+++ b/Views/Booking/EditBooking.cshtml
@@ -6,40 +6,41 @@
 
 <h1 class="main-font">@ViewData["Title"]</h1>
 
-<form method="post" asp-controller="Booking" asp-action="EditBooking">
-    <div class="form-group">
-        <label asp-for=NoOfCustomers>Number of customers</label>
-        <input asp-for=NoOfCustomers class="form-control" value="@Model.NoOfCustomers"/>
-        <span asp-validation-for="NoOfCustomers" class="text-danger"></span>
-    </div>
-    <div class="form-group">
-        <label asp-for=BookedDateTime>Select date and time for reservation</label>
-        <input asp-for=BookedDateTime type="datetime-local" asp-format="{0:yyyy-MM-ddTHH:mm}"
-               class="form-control"
-               value="@Model.BookedDateTime" />
-        <span asp-validation-for="BookedDateTime" class="text-danger"></span>
-    </div>
-    <div class="form-group">
-        <label asp-for=Name>Full name</label>
-        <input asp-for=Name class="form-control" value="@Model.Name" />
-        <span asp-validation-for=Name class="text-danger"></span>
-    </div>
-    <div class="form-group">
-        <label asp-for=PhoneNo>Phone number</label>
-        <input asp-for=PhoneNo class="form-control" value="@Model.PhoneNo"/>
-        <span asp-validation-for=PhoneNo class="text-danger"></span>
-    </div>
-    <div class="form-group">
-        <label asp-for=TableId>Table number</label>
-        <input asp-for=TableId class="form-control" value="@Model.TableId"/>
-        <span asp-validation-for=TableId class="text-danger"></span>
-    </div>
+<div class="page-content-form">
+    <form method="post" asp-controller="Booking" asp-action="EditBooking">
+        <div class="form-group">
+            <label asp-for=NoOfCustomers>Number of customers</label>
+            <input asp-for=NoOfCustomers class="form-control" value="@Model.NoOfCustomers"/>
+            <span asp-validation-for="NoOfCustomers" class="text-danger"></span>
+        </div>
+        <div class="form-group">
+            <label asp-for=BookedDateTime>Select date and time for reservation</label>
+            <input asp-for=BookedDateTime type="datetime-local" asp-format="{0:yyyy-MM-ddTHH:mm}"
+                   class="form-control"
+                   value="@Model.BookedDateTime" />
+            <span asp-validation-for="BookedDateTime" class="text-danger"></span>
+        </div>
+        <div class="form-group">
+            <label asp-for=Name>Full name</label>
+            <input asp-for=Name class="form-control" value="@Model.Name" />
+            <span asp-validation-for=Name class="text-danger"></span>
+        </div>
+        <div class="form-group">
+            <label asp-for=PhoneNo>Phone number</label>
+            <input asp-for=PhoneNo class="form-control" value="@Model.PhoneNo"/>
+            <span asp-validation-for=PhoneNo class="text-danger"></span>
+        </div>
+        <div class="form-group">
+            <label asp-for=TableId>Table number</label>
+            <input asp-for=TableId class="form-control" value="@Model.TableId"/>
+            <span asp-validation-for=TableId class="text-danger"></span>
+        </div>
 
-    <input type="hidden" asp-for="BookingId" />
-    <input type="hidden" asp-for="UserId" />
+        <input type="hidden" asp-for="BookingId" />
+        <input type="hidden" asp-for="UserId" />
 
-    <button type="submit" class="btn btn-primary btn-margin">Save</button>
-    <a asp-controller="Booking" asp-action="IndexBooking" class="btn btn-secondary btn-margin">Cancel</a>
-</form>
-
+        <button type="submit" class="btn btn-primary btn-margin">Save</button>
+        <a asp-controller="Booking" asp-action="IndexBooking" class="btn btn-secondary btn-margin">Cancel</a>
+    </form>
+</div>
 
