--- a/Views/Menu/CreateMenu.cshtml
+++ b/Views/Menu/CreateMenu.cshtml
@@ -6,27 +6,34 @@
 
 <h1 class="main-font">@ViewData["Title"]</h1>
 
-<form method="post" asp-controller="Menu" asp-action="CreateMenu">
-    <div class="form-group">
-        <label asp-for=Name>Name</label>
-        <input asp-for=Name class="form-control" />
-        <span asp-validation-for="Name" class="text-danger"></span>
-    </div>
-    <div class="form-group">
-        <label asp-for=Price>Price</label>
-        <input asp-for=Price class="form-control" />
-        <span asp-validation-for="Price" class="text-danger"></span>
-    </div>
-    <div class="form-check">
-        <input asp-for=IsAvailable class="form-check-input" type="checkbox" value="true" id="flexCheckDefault">
-        <label asp-for=IsAvailable class="form-check-label" for="flexCheckDefault">Available</label>
-    </div>
-    <div class="form-check">
-        <input asp-for=IsPopular class="form-check-input" type="checkbox" value="true" id="flexCheckDefault">
-        <label asp-for=IsPopular class="form-check-label" for="flexCheckDefault">Popular</label>
-    </div>
+<div class="page-content-form">
+    <form method="post" asp-controller="Menu" asp-action="CreateMenu">
+        <div class="form-group">
+            <label asp-for=Name>Name</label>
+            <input asp-for=Name class="form-control" />
+            <span asp-validation-for="Name" class="text-danger"></span>
+        </div>
+@*         <div class="form-group">
+            <label asp-for=Description>Description</label>
+            <input asp-for=Description class="form-control" />
+            <span asp-validation-for="Description" class="text-danger"></span>
+        </div> *@
+        <div class="form-group">
+            <label asp-for=Price>Price</label>
+            <input asp-for=Price class="form-control" />
+            <span asp-validation-for="Price" class="text-danger"></span>
+        </div>
+        <div class="form-check">
+            <input asp-for=IsAvailable class="form-check-input" type="checkbox" value="true" id="flexCheckDefault">
+            <label asp-for=IsAvailable class="form-check-label" for="flexCheckDefault">Available</label>
+        </div>
+        <div class="form-check">
+            <input asp-for=IsPopular class="form-check-input" type="checkbox" value="true" id="flexCheckDefault">
+            <label asp-for=IsPopular class="form-check-label" for="flexCheckDefault">Popular</label>
+        </div>
 
-    <button type="submit" class="btn btn-primary btn-margin">Save</button>
-    <a asp-controller="Menu" asp-action="IndexMenu" class="btn btn-secondary btn-margin">Cancel</a>
-</form>
+        <button type="submit" class="btn btn-primary btn-margin">Save</button>
+        <a asp-controller="Menu" asp-action="IndexMenu" class="btn btn-secondary btn-margin">Cancel</a>
+    </form>
+</div>
 
