--- a/Views/Menu/EditMenu.cshtml
+++ b/Views/Menu/EditMenu.cshtml
@@ -5,33 +5,34 @@
 }
 
 <h1 class="main-font">@ViewData["Title"]</h1>
+<div class="page-content-form">
+    <form method="post" asp-controller="Menu" asp-action="EditMenu">
+        <div class="form-group">
+            <label asp-for=Name>Name</label>
+            <input asp-for=Name class="form-control" value="@Model.Name" />
+            <span asp-validation-for="Name" class="text-danger"></span>
+        </div>
+        <div class="form-group">
+            <label asp-for=Price>Price</label>
+            <input asp-for=Price class="form-control" value="@Model.Price"/>
+            <span asp-validation-for="Price" class="text-danger"></span>
+        </div>
+        <div class="form-check">
+            <input asp-for=IsAvailable class="form-check-input" type="checkbox" value="true" id="flexCheckDefault" />
+            <label asp-for=IsAvailable class="form-check-label" for="flexCheckDefault">Available</label>
+            <span asp-validation-for="IsAvailable" class="text-danger"></span>
+        </div>
+        <div class="form-check">
+            <input asp-for=IsPopular class="form-check-input" type="checkbox" value="true" id="flexCheckDefault" />
+            <label asp-for=IsPopular class="form-check-label" for="flexCheckDefault">Popular</label>
+            <span asp-validation-for="IsPopular" class="text-danger"></span>
+        </div>
 
-<form method="post" asp-controller="Menu" asp-action="EditMenu">
-    <div class="form-group">
-        <label asp-for=Name>Name</label>
-        <input asp-for=Name class="form-control" value="@Model.Name" />
-        <span asp-validation-for="Name" class="text-danger"></span>
-    </div>
-    <div class="form-group">
-        <label asp-for=Price>Price</label>
-        <input asp-for=Price class="form-control" value="@Model.Price"/>
-        <span asp-validation-for="Price" class="text-danger"></span>
-    </div>
-    <div class="form-check">
-        <input asp-for=IsAvailable class="form-check-input" type="checkbox" value="true" id="flexCheckDefault" />
-        <label asp-for=IsAvailable class="form-check-label" for="flexCheckDefault">Available</label>
-        <span asp-validation-for="IsAvailable" class="text-danger"></span>
-    </div>
-    <div class="form-check">
-        <input asp-for=IsPopular class="form-check-input" type="checkbox" value="true" id="flexCheckDefault" />
-        <label asp-for=IsPopular class="form-check-label" for="flexCheckDefault">Popular</label>
-        <span asp-validation-for="IsPopular" class="text-danger"></span>
-    </div>
+        <input type="hidden" asp-for="MenuItemId" />
 
-    <input type="hidden" asp-for="MenuItemId" />
+        <button type="submit" class="btn btn-primary btn-margin">Save</button>
 
-    <button type="submit" class="btn btn-primary btn-margin">Save</button>
-
-    <a asp-controller="Menu" asp-action="IndexMenu" class="btn btn-secondary btn-margin">Cancel</a>
-</form>
+        <a asp-controller="Menu" asp-action="IndexMenu" class="btn btn-secondary btn-margin">Cancel</a>
+    </form>
+</div>
 
